config/samples/clusteradmissionpolicy_starlark_populate_vars.yaml
apiVersion: admitik.freepik.com/v1alpha1
kind: ClusterAdmissionPolicy
metadata:
  name: starlark-populate-vars
spec:

  failureAction: Permissive

  # Resources to be watched
  watchedResources:
    group: ""
    version: v1
    resource: namespaces
    operations:
      - CREATE
      - UPDATE

  # Other resources to be retrieved for conditions templates.
  # They will be included under .sources scope in the template
  sources: []

  conditions:
    - name: first-condition
      engine: starlark
      key: |
        vars.update({"your-key": "your-value"})
        vars.update({"your-other-key": ["what", "ever", "you", "need"]})
        
        print("pass")
      value: "pass"

    - name: second-condition
      engine: starlark
      key: |
        # 'vars' have all the things stored by the user, even through the template engines when possible
        # Let's show all of them in logs
        log.printf("Available variables: {}".format( vars ))
        
        # vars["your-key"] has 'your-value' inside
        # Let's show it in logs
        log.printf("Specific variable: {}".format( vars["your-key"] ))
        
        print("pass")
      value: "pass"

  message:
    engine: starlark
    template: |
      print("Resource '{}' is bypassing all conditions".format( object["metadata"]["name"] ))
